# TileMapRaylib

./: CMakeLists.txt  main.cpp
assets/: layerMap.tm  myMap.tm  savedMap.tm
engine/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
engine/game/: Game.cpp  Game.h
engine/gameState/: GameState.h  SceneType.h
engine/scene/: Scene.h
engine/tileMap/: TileMap.cpp  TileMap.h  TileMapUtils.h
game/: GameState.cpp  Player.cpp  Player.h  TileMap.cpp  TileMap.h
game/editor/: AutoTiler.cpp  AutoTiler.h  EditorScene.cpp  EditorScene.h  GuiManager.cpp  GuiManager.h  TestSceneType.cpp
game/test/: GuiManager.cpp  GuiManager.h  TestScene.cpp  TestScene.h  TestSceneType.h
